Small fix for the stat value overlapping the stat label

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -79,14 +79,14 @@ h1 {
             dt {
                 float: left;
                 width: 50%;
-                padding: 0;
+                padding: 0 2px 0 2px;
                 margin: 0;
                 font-weight: bold;
             }
             dd {
                 float: left;
                 width: 50%;
-                padding: 0;
+                padding: 0 2px 0 2px;
                 margin: 0;
                 a {
                     display: inline-block;
